Add : Networkの実装前プロジェクト設定

--- a/Projects/Platform/Platform.vcxproj.filters
+++ b/Projects/Platform/Platform.vcxproj.filters
@@ -19,6 +19,9 @@
     <Filter Include="ヘッダー ファイル\DesignPattern">
       <UniqueIdentifier>{2d576d4d-eaa8-4fce-beef-dcb407622a8b}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ヘッダー ファイル\Network">
+      <UniqueIdentifier>{3859f874-a40e-44bb-885d-a76e4177f37b}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -44,6 +47,9 @@
     </ClInclude>
     <ClInclude Include="..\..\include\Platform\DesignPattern\Factory.h">
       <Filter>ヘッダー ファイル\DesignPattern</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\Platform\Network\Network.h">
+      <Filter>ヘッダー ファイル\Network</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
