--- a/Projects/DirectX11/DirectX11.vcxproj.filters
+++ b/Projects/DirectX11/DirectX11.vcxproj.filters
@@ -21,13 +21,13 @@
     <ClInclude Include="targetver.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\include\Platform\Graphics\Graphics.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\include\Thirdparty\Graphics\DirectX11\Factory.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="..\..\include\Thirdparty\Graphics\DirectX11\DirectX11.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\Thirdparty\Graphics\DirectX11\Graphics.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
@@ -38,10 +38,10 @@
     <ClCompile Include="dllmain.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\include\Thirdparty\Graphics\DirectX11\Factory.cpp">
+    <ClCompile Include="..\..\src\Thirdparty\Graphics\DirectX11\Graphics.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\src\Platform\Graphics\Graphics.cpp">
+    <ClCompile Include="..\..\src\Thirdparty\Graphics\DirectX11\Factory.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
