--- a/Projects/Winsock/Winsock.vcxproj.filters
+++ b/Projects/Winsock/Winsock.vcxproj.filters
@@ -21,7 +21,10 @@
     <ClInclude Include="pch.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="Winsock.h">
+    <ClInclude Include="..\..\include\Thirdparty\Network\Winsock\Winsock.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\Thirdparty\Network\Winsock\Network.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
@@ -30,6 +33,9 @@
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="pch.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\Thirdparty\Network\Winsock\Network.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
