--- a/Projects/Core/Core.vcxproj
+++ b/Projects/Core/Core.vcxproj
@@ -157,6 +157,7 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\include\Core.h" />
     <ClInclude Include="..\..\include\Core\Allocator\DoubleBufferAllocator.h" />
     <ClInclude Include="..\..\include\Core\Allocator\IAllocator.h" />
     <ClInclude Include="..\..\include\Core\Allocator\LinerAllocator.h" />
@@ -169,6 +170,8 @@
     <ClInclude Include="..\..\include\Core\Base\String.h" />
     <ClInclude Include="..\..\include\Core\Base\StringHelper.h" />
     <ClInclude Include="..\..\include\Core\Graphics\GraphicsFactory.h" />
+    <ClInclude Include="..\..\include\Core\Graphics\GraphicsModule.h" />
+    <ClInclude Include="..\..\include\Core\Graphics\Renderer.h" />
     <ClInclude Include="..\..\include\Core\IO\DllLoader.h" />
     <ClInclude Include="..\..\include\Core\IO\FileStream.h" />
     <ClInclude Include="..\..\include\Core\IO\Path.h" />
@@ -182,7 +185,7 @@
     <ClInclude Include="..\..\include\Core\Math\Vector4.h" />
     <ClInclude Include="..\..\include\Core\Math\Vector3.h" />
     <ClInclude Include="..\..\include\Core\Module\Module.h" />
-    <ClInclude Include="..\..\include\Core\Network\Network.h" />
+    <ClInclude Include="..\..\include\Core\Network\NetworkModule.h" />
     <ClInclude Include="..\..\include\Core\System\System.h" />
     <ClInclude Include="..\..\include\Core\Task\Task.h" />
     <ClInclude Include="..\..\include\Core\Thread\Thread.h" />
@@ -197,12 +200,13 @@
     <ClCompile Include="..\..\src\Core\Allocator\StackAllocator.cpp" />
     <ClCompile Include="..\..\src\Core\Base\Logger.cpp" />
     <ClCompile Include="..\..\src\Core\Base\String.cpp" />
-    <ClCompile Include="..\..\src\Core\Graphics\GraphicsFactory.cpp" />
+    <ClCompile Include="..\..\src\Core\Graphics\GraphicsModule.cpp" />
+    <ClCompile Include="..\..\src\Core\Graphics\Renderer.cpp" />
     <ClCompile Include="..\..\src\Core\IO\DllLoader.cpp" />
     <ClCompile Include="..\..\src\Core\IO\FileStream.cpp" />
     <ClCompile Include="..\..\src\Core\IO\Path.cpp" />
     <ClCompile Include="..\..\src\Core\IO\PathHelper.cpp" />
-    <ClCompile Include="..\..\src\Core\Network\Network.cpp" />
+    <ClCompile Include="..\..\src\Core\Network\NetworkModule.cpp" />
     <ClCompile Include="..\..\src\Core\System\System.cpp" />
     <ClCompile Include="..\..\src\Core\Task\Task.cpp" />
     <ClCompile Include="..\..\src\Core\Thread\Thread.cpp" />
