--- a/Projects/Core/Core.vcxproj.filters
+++ b/Projects/Core/Core.vcxproj.filters
@@ -52,9 +52,6 @@
     <Filter Include="ヘッダー ファイル\Task">
       <UniqueIdentifier>{e0ab0695-3a0b-4291-9f8a-d41b429310a0}</UniqueIdentifier>
     </Filter>
-    <Filter Include="ヘッダー ファイル\Network">
-      <UniqueIdentifier>{2916228a-a354-4c79-aa70-6d1168a6281b}</UniqueIdentifier>
-    </Filter>
     <Filter Include="ソース ファイル\Network">
       <UniqueIdentifier>{44c27bda-d76b-4a2e-96d7-f5c1dc4734fd}</UniqueIdentifier>
     </Filter>
@@ -69,6 +66,12 @@
     </Filter>
     <Filter Include="ヘッダー ファイル\Graphics">
       <UniqueIdentifier>{93cd0a79-4ce2-41fa-bb55-452255be1632}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ソース ファイル\Module">
+      <UniqueIdentifier>{79c28b2d-4c2f-47f4-beca-31bae8ee4f20}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ソース ファイル\Thread">
+      <UniqueIdentifier>{f05ec238-c380-42d8-87cb-c24830196c81}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -156,17 +159,26 @@
     <ClInclude Include="..\..\include\Core\Time\Time.h">
       <Filter>ヘッダー ファイル\Time</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\include\Core\Task\Task.h">
-      <Filter>ヘッダー ファイル\Task</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\include\Core\Network\Network.h">
-      <Filter>ヘッダー ファイル\Network</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\include\Core\System\System.h">
       <Filter>ヘッダー ファイル\System</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\include\Core\Graphics\Renderer.h">
+      <Filter>ヘッダー ファイル\Graphics</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\Core.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\include\Core\Graphics\GraphicsFactory.h">
       <Filter>ヘッダー ファイル\Graphics</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\Core\Network\NetworkModule.h">
+      <Filter>ヘッダー ファイル\Module</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\Core\Graphics\GraphicsModule.h">
+      <Filter>ヘッダー ファイル\Module</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\Core\Task\Task.h">
+      <Filter>ヘッダー ファイル\Task</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -203,20 +215,23 @@
     <ClCompile Include="..\..\src\Core\IO\DllLoader.cpp">
       <Filter>ソース ファイル\IO</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\src\Core\Thread\Thread.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\src\Core\Task\Task.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\src\Core\Network\Network.cpp">
-      <Filter>ソース ファイル\Network</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\src\Core\System\System.cpp">
       <Filter>ソース ファイル\System</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\src\Core\Graphics\GraphicsFactory.cpp">
+    <ClCompile Include="..\..\src\Core\Graphics\Renderer.cpp">
       <Filter>ソース ファイル\Graphics</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\Core\Graphics\GraphicsModule.cpp">
+      <Filter>ソース ファイル\Module</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\Core\Network\NetworkModule.cpp">
+      <Filter>ソース ファイル\Module</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\Core\Thread\Thread.cpp">
+      <Filter>ソース ファイル\Thread</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\Core\Task\Task.cpp">
+      <Filter>ソース ファイル\Thread</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
