--- a/Projects/Platform/Platform.vcxproj
+++ b/Projects/Platform/Platform.vcxproj
@@ -159,13 +159,14 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\include\Platform.h" />
     <ClInclude Include="..\..\include\Platform\Base\IRenderer.h" />
     <ClInclude Include="..\..\include\Platform\Base\ISystem.h" />
     <ClInclude Include="..\..\include\Platform\Base\IWindow.h" />
     <ClInclude Include="..\..\include\Platform\Config.h" />
     <ClInclude Include="..\..\include\Platform\DesignPattern\Factory.h" />
     <ClInclude Include="..\..\include\Platform\DesignPattern\Singleton.h" />
-    <ClInclude Include="..\..\include\Platform\Network\Network.h" />
+    <ClInclude Include="..\..\include\Platform\Network\INetwork.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
